--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=750, target-densitydpi=device-dpi, user-scalable=0">
-	<title>故事王</title>
+	<title>recruit</title>
 	<link rel="stylesheet" href="css/fullpage.min.css">
 	<link rel="stylesheet" href="css/index.css">
 	<script>
