--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=750, target-densitydpi=device-dpi, user-scalable=0">
 	<title>recruit</title>
 	<link rel="stylesheet" href="css/fullpage.min.css">
-	<link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" href="css/index.css?v=1.0.1">
 	<script>
         document.addEventListener('DOMContentLoaded', function () { //添加监听DOM 结构是否加载完，（不包含图片和其他资源）
             function audioAutoPlay() {
@@ -153,7 +153,7 @@
 	<script src="js/jquery.1.11.3.js"></script>
 	<script src="js/jquery.fullpage.min.js"></script>
 	<script src="js/iscroll.min.js"></script>
-	<script src="js/index.js"></script>
+	<script src="js/index.js?v=1.0.1"></script>
 	<script src="js/zoomify.min.js"></script>
 	<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 	<script type="text/javascript">
