--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
 	<title>recruit</title>
 	<link rel="stylesheet" href="css/fullpage.min.css">
 	<link rel="stylesheet" href="css/index.css?v=1.0.1">
-	<script>
-        document.addEventListener('DOMContentLoaded', function () { //添加监听DOM 结构是否加载完，（不包含图片和其他资源）
-            function audioAutoPlay() {
-                var audio = document.getElementById('music');//获取音乐标签的id
-                audio.play(); //播放
-                document.addEventListener("WeixinJSBridgeReady", function () { //监听微信准备就绪事件，只能在微信用
-                    audio.play(); //播放
-                }, false);
-            }
-            audioAutoPlay();
-        });
-	</script>
+	<!--<script>-->
+        <!--document.addEventListener('DOMContentLoaded', function () { //添加监听DOM 结构是否加载完，（不包含图片和其他资源）-->
+            <!--function audioAutoPlay() {-->
+                <!--var audio = document.getElementById('music');//获取音乐标签的id-->
+                <!--audio.play(); //播放-->
+                <!--document.addEventListener("WeixinJSBridgeReady", function () { //监听微信准备就绪事件，只能在微信用-->
+                    <!--audio.play(); //播放-->
+                <!--}, false);-->
+            <!--}-->
+            <!--audioAutoPlay();-->
+        <!--});-->
+	<!--</script>-->
 </head>
 <body>
-	<span class="musicIcon"></span>
+	<!--<span class="musicIcon"></span>-->
 	<!--<audio src="media/music.mp3" id="music" autoplay loop="loop"></audio>-->
 
 	<!-- fullpage -->
@@ -155,21 +155,5 @@
 	<script src="js/iscroll.min.js"></script>
 	<script src="js/index.js?v=1.0.1"></script>
 	<script src="js/zoomify.min.js"></script>
-	<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-	<script type="text/javascript">
-	function autoPlayAudio() {
-		 wx.config({
-				 debug: false,
-				 appId: '',
-				 timestamp: 1,
-				 nonceStr: '',
-				 signature: '',
-				 jsApiList: []
-		 });
-		 wx.ready(function() {
-		     document.getElementById('music').play();
-		 });
- 	}
-	</script>
 </body>
 </html>
